<resources>
    <string name="app_name">RestaurantSystem</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>

    <string name="welcome_customer">Welcome, Customer</string>
    <string name="see_menu">See Menu</string>
    <string name="place_order">Place Order</string>
    <string name="order_dish">Order Dish</string>
    <string name="staff_login">Staff Login</string>
    <string name="i_am_a_customer">I am a customer</string>
    <string name="menu_title">~Menu~</string>
    <string name="exit">Exit</string>
    <string name="deliver_order_header">Delivery System</string>
    <string name="deliver_order_complete">Order Completed</string>

    <string name="serve_dish_header">Dish Serve System</string>
    <string name="delete_review">Delete Review</string>
    <string name="add_staff">Add Staff</string>
    <string name="review_title">Reviews</string>
    <string name="see_review">See Review</string>
    <string name="confirm">Confirm</string>
    <string name="delete">delete</string>
    <string name="serve_dish_complete">Dish Served</string>

    <string name="no_current_dish">No current dish</string>
    <string name="no_current_order">No current order</string>

    <string name="title_activity_deliver_order">DeliverOrderActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="header">Header</string>
    <string name="logout_button_text">Logout</string>
    <string name="view_current_order">View Current Order</string>
    <string name="get_next_order">Get Next Order</string>
    <string name="return_button">Return</string>
    <string name="completed_order">Completed Order</string>
    <string name="get_next_dish">Get Next Dish</string>
    <string name="view_current_dish">View Current Dish</string>
    <string name="logout_button">Logout</string>
    <string name="complete_serve">Complete Serve</string>
    <string name="dish_names">Dish Names</string>
    <string name="quantity">Quantity</string>
    <string name="edit_order">Edit Order</string>
    <string name="location">Location</string>
    <string name="enter_table_number_or_address">Enter Table# or Address</string>
    <string name="select_dish_to_remove">Select the dish you would like to remove from your order</string>
    <string name="remove_dish">Remove dish</string>
    <string name="done">Done</string>
    <string name="order_placed_message">Your order was successfully placed</string>
    <string name="return_main_menu">Return to Main Menu</string>
    <string name="userId">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_id">Enter ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="enroll_new_staff">Enroll New Staff</string>
    <string name="save">Save</string>
    <string name="fixed_user_id">User ID (Pre-fixed)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="pick_user_type">Pick User Type</string>
    <string name="enter_salary">Enter Salary</string>
    <string name="name_of_inventory">Name of Inventory Item</string>
    <string name="welcome_manager">Welcome, Manager</string>
    <string name="manage_menu">Manage Menu</string>
    <string name="price">Price</string>
    <string name="quantity_in_kg">Quantity in kg</string>
    <string name="date_import_or_expiry_eg_20201212">Date(Import or Expiry eg 20201212)</string>
    <string name="freshness_notes">Freshness(enter N/A when do not have in a,b,c,d)</string>
    <string name="add">Add</string>
    <string name="freshness">Freshness Level</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="usage">Usage</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="check_info">Check info</string>
    <string name="update_amount">Update amount</string>
    <string name="update_freshness">update freshness</string>
    <string name="textview">TextView</string>
    <string name="return_to_starter">Return to Starter</string>
    <string name="submit">Submit</string>
    <string name="write_comment">Write comment</string>
    <string name="enter_your_name">enter your name</string>
    <string name="if_anonymous_y_or_n">if Anonymous?(Y or N)</string>
    <string name="rate_integer_from_1_to_5">Rate(integer from 1 to 5)</string>
    <string name="search">Search</string>
    <string name="dish_name">Dish Name</string>
    <string name="cooked">Cooked</string>
    <string name="add_review">Add Review</string>
    <string name="please_enter_the_table_number_or_delivery_address_below">Please enter the table# for Dine-In, or
        delivery
        address below
    </string>
    <string name="dine_in_or_delivery">Is this order Dine In or Delivery?</string>
    <string name="show_map">Show Map</string>
    <string name="MessageNewDishArrived">New dish arrived!</string>
    <string name="add_identity">Add your Identity</string>
    <string name="Name">Name</string>
    <string name="date_import_expiry">Date import/expiry</string>
    <string name="enter_usage">Enter number of usage</string>
    <string name="Cooked">cooked</string>
    <string name="upload">Upload</string>
    <string name="inventory_item_name">Inventory Item Name</string>
    <string name="number_of_usage_note">Enter a positive number to deduct the inventory amount, a negative number to
        increase inventory.
    </string>
    <string name="welcom_inventory_staff">Welcome, Inventory Staff</string>
    <string name="user_list">User List</string>
    <string name="see_users">See Users</string>
    <string name="freshness_a_b_c_d">freshness a,b,c,d</string>
    <string name="enter_amountOfChange">Enter the amount of change</string>

</resources>