<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".manager_activities.ManagerPickActionActivity">


	<TextView
			android:text="@string/welcome_manager"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/welcome_manager" tools:ignore="MissingConstraints"/>


	<Button
			android:text="@string/manage_menu"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="ManageMenu"
			tools:ignore="MissingConstraints,UsingOnClickInXml"
			tools:layout_editor_absoluteX="138dp" android:layout_marginTop="50dp"
			app:layout_constraintTop_toBottomOf="@+id/button5" android:id="@+id/button9"/>
	<Button
			android:text="@string/see_menu"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="SeeMenu"
			tools:ignore="MissingConstraints,UsingOnClickInXml"
			tools:layout_editor_absoluteX="155dp" app:layout_constraintTop_toTopOf="parent"
			android:layout_marginTop="131dp" android:id="@+id/button5"/>
	<Button
			android:text="@string/see_review"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="SeeReview"
			tools:ignore="MissingConstraints,UsingOnClickInXml"
			tools:layout_editor_absoluteX="150dp" android:layout_marginTop="50dp"
			app:layout_constraintTop_toBottomOf="@+id/button9" android:id="@+id/button10"/>
	<Button
			android:text="@string/delete_review"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="DeleteReview"
			tools:ignore="MissingConstraints,UsingOnClickInXml"
			tools:layout_editor_absoluteX="138dp" android:layout_marginTop="50dp"
			app:layout_constraintTop_toBottomOf="@+id/button10" android:id="@+id/button12"/>
	<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:onClick="enrollStaff"
			android:text="@string/enroll_new_staff"
			tools:ignore="MissingConstraints,OnClick,UsingOnClickInXml"
			tools:layout_editor_absoluteX="123dp" android:layout_marginTop="50dp"
			app:layout_constraintTop_toBottomOf="@+id/button12"/>

</androidx.constraintlayout.widget.ConstraintLayout>