<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".useractivities.EnrollUserActivity">

	<TextView
		android:id="@+id/textView6"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="52dp"
		android:layout_marginBottom="5dp"
		android:text="@string/enter_salary"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="@+id/editNumSalary"
		app:layout_constraintStart_toStartOf="parent"
		tools:ignore="MissingConstraints" />

	<TextView
		android:id="@+id/textView5"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="44dp"
		android:layout_marginTop="50dp"
		android:layout_marginEnd="8dp"
		android:text="@string/pick_user_type"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="@+id/textView6"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textView4"
		tools:ignore="MissingConstraints" />

	<TextView
		android:id="@+id/textView4"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="15dp"
		android:layout_marginBottom="5dp"
		android:text="@string/re_enter_password"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="@+id/editTextNewUserConfirmPassword"
		app:layout_constraintEnd_toEndOf="@+id/textView5"
		app:layout_constraintStart_toStartOf="parent" />

	<TextView
		android:id="@+id/textView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:text="@string/enter_name"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="@+id/editTextNewUserName"
		app:layout_constraintEnd_toEndOf="@+id/textView3" />

	<TextView
		android:id="@+id/textView3"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:text="@string/enter_password"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="@+id/editTextNewUserPassword"
		app:layout_constraintEnd_toEndOf="@+id/textView4" />

	<TextView
		android:id="@+id/textView7"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:text="@string/fixed_user_id"
		android:textSize="16sp"
		android:textStyle="bold"
		app:layout_constraintBottom_toBottomOf="@+id/editTextNewUserId"
		app:layout_constraintEnd_toEndOf="@+id/textView" />

	<AutoCompleteTextView
		android:id="@+id/editTextNewUserId"
		android:layout_width="188dp"
		android:layout_height="43dp"
		android:ems="10"
		android:gravity="center_horizontal"
		android:hint="@string/fixed_user_id"
		android:inputType="none"
		android:textColor="#A19E9E"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.80"
		app:layout_constraintStart_toStartOf="parent"
		tools:ignore="MissingConstraints"
		tools:layout_editor_absoluteY="98dp" />


	<EditText
		android:id="@+id/editTextNewUserName"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:autofillHints="@string/enter_name"
		android:ems="10"
		android:gravity="center_horizontal"
		android:hint="@string/enter_name"
		android:inputType="textPersonName"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="@+id/editTextNewUserId"
		app:layout_constraintHorizontal_bias="0.80"
		app:layout_constraintStart_toStartOf="@+id/editTextNewUserId"
		app:layout_constraintTop_toBottomOf="@+id/editTextNewUserId" />

	<EditText
		android:id="@+id/editTextNewUserPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:autofillHints="@string/enter_password"
		android:ems="10"
		android:gravity="center_horizontal"
		android:hint="@string/enter_password"
		android:inputType="textPassword"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="@+id/editTextNewUserName"
		app:layout_constraintHorizontal_bias="0.80"
		app:layout_constraintStart_toStartOf="@+id/editTextNewUserName"
		app:layout_constraintTop_toBottomOf="@+id/editTextNewUserName" />

	<EditText
		android:id="@+id/editTextNewUserConfirmPassword"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:autofillHints="@string/confirm_password"
		android:ems="10"
		android:gravity="center_horizontal"
		android:hint="@string/confirm_password"
		android:inputType="textPassword"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="@+id/editTextNewUserPassword"
		app:layout_constraintHorizontal_bias="0.80"
		app:layout_constraintStart_toStartOf="@+id/editTextNewUserPassword"
		app:layout_constraintTop_toBottomOf="@+id/editTextNewUserPassword" />


	<NumberPicker
		android:id="@+id/numPickerUserType"
		android:layout_width="189dp"
		android:layout_height="73dp"
		android:layout_marginTop="20dp"
		app:layout_constraintBottom_toBottomOf="@+id/textView5"
		app:layout_constraintEnd_toEndOf="@+id/editTextNewUserConfirmPassword"
		app:layout_constraintHorizontal_bias="1.0"
		app:layout_constraintStart_toStartOf="@+id/editTextNewUserConfirmPassword"
		app:layout_constraintTop_toTopOf="@+id/textView5" />

	<Button
			android:id="@+id/cancelUserEnroll"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="52dp"
			android:onClick="cancelUserEnroll"
			android:text="@android:string/cancel"
			app:layout_constraintBottom_toBottomOf="@+id/saveNewUser"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@+id/saveNewUser"
			app:layout_constraintVertical_bias="0.0" tools:ignore="UsingOnClickInXml"/>

	<Button
			android:id="@+id/saveNewUser"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="188dp"
			android:layout_marginEnd="60dp"
			android:onClick="enrollNewUser"
			android:text="@string/save"
			app:layout_constraintEnd_toStartOf="@+id/cancelUserEnroll"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/editTextNewUserConfirmPassword" tools:ignore="UsingOnClickInXml"/>

	<EditText
		android:id="@+id/editNumSalary"
		android:layout_width="185dp"
		android:layout_height="43dp"
		android:layout_marginTop="20dp"
		android:ems="10"
		android:gravity="center_horizontal"
		android:hint="@string/enter_salary"
		android:inputType="numberDecimal"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="@+id/numPickerUserType"
		app:layout_constraintStart_toStartOf="@+id/numPickerUserType"
		app:layout_constraintTop_toBottomOf="@+id/numPickerUserType"
		android:autofillHints="@string/enter_salary" />


</androidx.constraintlayout.widget.ConstraintLayout>