<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliverOrderActivity">

  <TextView
          android:text="@string/textview"
          android:layout_width="400dp"
          android:layout_height="150dp" android:id="@+id/CurrentOrder"
          app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
          android:textSize="24sp" android:textStyle="bold"
          android:textAllCaps="false" android:typeface="normal" tools:ignore="MissingConstraints"
          app:layout_constraintTop_toTopOf="parent"/>
  <Button
          android:text="@string/return_button"
          android:layout_width="200dp"
          android:layout_height="50dp" android:id="@+id/ReturnButton"
          app:backgroundTint="#03A9F4"
          android:onClick="selectReturn" tools:ignore="MissingConstraints,UsingOnClickInXml"
          app:layout_constraintTop_toBottomOf="@+id/CompleteButton"
          tools:layout_editor_absoluteX="105dp" android:layout_marginTop="12dp"/>
  <Button
          android:text="@string/completed_order"
          android:layout_width="200dp"
          android:layout_height="50dp" android:id="@+id/CompleteButton"
          android:onClick="selectFinishOrder" tools:ignore="MissingConstraints,UsingOnClickInXml"
          tools:layout_editor_absoluteX="105dp" app:backgroundTint="#2196F3" android:layout_marginTop="12dp"
          app:layout_constraintTop_toBottomOf="@+id/ShowMap"/>
  <Button
          android:text="Show Map"
          android:layout_width="200dp"
          android:layout_height="50dp" android:id="@+id/ShowMap"
          tools:layout_editor_absoluteX="105dp" app:backgroundTint="#2196F3" android:layout_marginTop="237dp"
          app:layout_constraintTop_toBottomOf="@+id/CurrentOrder" android:onClick="selectShowMap"/>
</androidx.constraintlayout.widget.ConstraintLayout>