<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".inventoryactivities.AddInventoryActivity">

    <EditText
            android:layout_width="358dp"
            android:layout_height="51dp"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/editTextTextPersonName"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="87dp"
            android:layout_marginStart="16dp" android:layout_marginBottom="29dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2" android:autofillHints="Name"
            tools:ignore="LabelFor"/>
    <EditText
            android:layout_width="360dp"
            android:layout_height="42dp"
            android:inputType="textPersonName|numberDecimal"
            android:text="@string/price"
            android:ems="10"
            android:id="@+id/editTextTextPersonName2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" android:layout_marginBottom="31dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName3" android:autofillHints="Price"
            tools:ignore="LabelFor"/>
    <EditText
            android:layout_width="363dp"
            android:layout_height="45dp"
            android:inputType="numberSigned|textPersonName|numberDecimal"
            android:text="@string/quantity_in_kg"
            android:ems="10"
            android:id="@+id/editTextTextPersonName3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" android:layout_marginBottom="37dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName4" android:autofillHints="Quantity in kg"
            tools:ignore="LabelFor"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:inputType="date|number|textPersonName"
            android:text="@string/date_import_or_expiry_eg_20201212"
            android:ems="10"
            android:id="@+id/editTextTextPersonName4"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3"
            android:layout_marginBottom="40dp" app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="23dp"
            app:layout_constraintHorizontal_bias="0.0" android:autofillHints="Date" tools:ignore="LabelFor"/>
    <EditText
            android:layout_width="382dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:text="@string/freshness_n_a_when_do_not_have_in_a_b_c_d"
            android:ems="10"
            android:id="@+id/editTextTextPersonName5"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="12dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" android:layout_marginBottom="61dp"
            app:layout_constraintBottom_toTopOf="@+id/button10" android:autofillHints="Freshness"
            tools:ignore="LabelFor"/>
    <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button10"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="116dp" app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5"
            android:layout_marginBottom="182dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>