<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".serving_staff_activities.ServeDishActivity">
    <TextView
            android:text="@string/textview"
            android:layout_width="400dp"
            android:layout_height="75dp" android:id="@+id/CurrentDish"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.454" android:textSize="24sp" android:textStyle="bold"
            android:textAllCaps="false" android:typeface="normal" tools:ignore="MissingConstraints"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="224dp"
            android:layout_marginBottom="250dp" app:layout_constraintBottom_toTopOf="@+id/ReturnButton"/>
    <Button
            android:text="@string/return_button"
            android:layout_width="200dp"
            android:layout_height="50dp" android:id="@+id/ReturnButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:backgroundTint="#3F51B5" android:layout_marginEnd="16dp"
            android:onClick="selectReturn" tools:ignore="MissingConstraints,UsingOnClickInXml"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
    <Button
            android:text="@string/complete_serve"
            android:layout_width="200dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ReturnButton"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"
            android:onClick="selectCompleteDish" tools:ignore="MissingConstraints,UsingOnClickInXml"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>