<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".menu_activities.EditPriceActivity">
    <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content" android:id="@+id/askSelection"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="200dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="104dp"/>
    <EditText
            android:id="@+id/textNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="@string/enter_amountOfChange"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/enter_amountOfChange"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/askSelection"
            app:layout_constraintHorizontal_bias="0.80"
            app:layout_constraintStart_toStartOf="@+id/askSelection"
            app:layout_constraintTop_toBottomOf="@+id/askSelection" android:inputType="numberDecimal"/>
    <Button
            android:text="@string/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="155dp" android:layout_marginTop="187dp"
            app:layout_constraintTop_toBottomOf="@+id/askSelection"
            android:onClick="confirm" tools:ignore="UsingOnClickInXml"
    />
    <Button
            android:text="@string/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="308dp"
            app:layout_constraintTop_toBottomOf="@+id/askSelection" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="160dp"
            android:onClick="selectExit" tools:ignore="UsingOnClickInXml"/>

</androidx.constraintlayout.widget.ConstraintLayout>